@@ -22,18 +22,26 @@ public class LoginScreen extends AppCompatActivity {
     private FirebaseAuth auth;
     private Button btnLogin;
 
-    /*@Override
+    @Override
     public void onStart() {
         super.onStart();
         // Check if user is signed in (non-null) and update UI accordingly.
         FirebaseUser currentUser = auth.getCurrentUser();
-        updateUI(currentUser);
-    }*/
 
-    private void updateUI (FirebaseUser user){
+        /*if (currentUser.isLoggedIn = true)
+        {
+            startActivity(new Intent(LoginScreen.this, MainActivity.class));
+            finish();
+        }
+        else return;
+    }*/
+    }
+
+ /*   private void updateUI (FirebaseUser user){
         if (user != null) {
-            inputEmail.setText(getString(R.string.google_status_fmt, user.getEmail()));
-            inputPassword.setText(getString(R.string.firebase_status_fmt, user.getUid()));
+            // This code is redundant as not n
+            //inputEmail.setText(getString(R.string.google_status_fmt, user.getEmail()));
+            //inputPassword.setText(getString(R.string.firebase_status_fmt, user.getUid()));
 
             findViewById(R.id.signup).setVisibility(View.GONE);
         } else {
@@ -42,7 +50,7 @@ public class LoginScreen extends AppCompatActivity {
 
             findViewById(R.id.signup).setVisibility(View.VISIBLE);
         }
-    }
+    }*/
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -54,49 +62,69 @@ public class LoginScreen extends AppCompatActivity {
 
     public void onStop() {
         super.onStop();
-        auth.getInstance().signOut();
+        FirebaseAuth.getInstance().signOut();
     }
 
+    /**
+     * Authentication task. This method is invoke through onClick of login button in activity_login.
+     * Will initialise the elements in the view, as well as firebase auth.
+     *
+     * Take contents of email and password editText, convert to string, validate if those fields are empty, and if so throw an error.
+     *
+     * If none of these errors exist, it will perform auth task in firebase to determine if entered valiues match a record in Firebase with correct details (e.g. username/pass)
+     *
+     * If authentication is successful, this activity will be destroyed and user will be taken to MainActivity. Otherwise they will be returned an error that authentication failed
+     *
+     * Note: This error needs to be made more granular e.g. user does not exist, please sign in/ or incorrect password.
+     */
     public void tryAuth(View view) {
-        if (auth.getCurrentUser() != null) {
-            startActivity(new Intent(LoginScreen.this, MainActivity.class));
-            finish();
-        }
+            inputEmail = findViewById(R.id.username);
+            inputPassword = findViewById(R.id.password);
+            btnLogin = findViewById(R.id.login);
+            boolean cancel = false;
+            View focusView = null;
 
+            auth = FirebaseAuth.getInstance();
+            String email = inputEmail.getText().toString();
+            final String password = inputPassword.getText().toString();
 
-        inputEmail = findViewById(R.id.username);
-        inputPassword = findViewById(R.id.password);
-        btnLogin = (Button) findViewById(R.id.login);
-
-        auth = FirebaseAuth.getInstance();
-        String email = inputEmail.getText().toString();
-        final String password = inputPassword.getText().toString();
-
-/*        if (TextUtils.isEmpty(email)) {
-            Toast.makeText(getApplicationContext(), "Enter email address!", Toast.LENGTH_SHORT).show();
-            return;
+        if (TextUtils.isEmpty(email)) {
+            inputEmail.setError("Email address cannot be blank");
+            focusView = inputEmail;
+            cancel = true;
         }
 
         if (TextUtils.isEmpty(password)) {
-            Toast.makeText(getApplicationContext(), "Enter password!", Toast.LENGTH_SHORT).show();
-            return;
-        }*/
-        auth.signInWithEmailAndPassword(email, password)
-                .addOnCompleteListener(this, new OnCompleteListener<AuthResult>() {
-                    @Override
-                    public void onComplete(@NonNull Task<AuthResult> task) {
-                        if (task.isSuccessful()) {
-                            FirebaseUser user = auth.getCurrentUser();
-                            updateUI(user);
-                        } else {
-                            Toast.makeText(LoginScreen.this, "Authentication failed.",
-                                    Toast.LENGTH_SHORT).show();
-                            updateUI(null);
-                        }
-                    }
-                });
+            inputPassword.setError("Password cannot be blank");
+            focusView = inputPassword;
+            cancel = true;
+        }
 
-    }
+        if (cancel) {
+            focusView.requestFocus();
+        }
+        else {
+            auth.signInWithEmailAndPassword(email, password)
+                    .addOnCompleteListener(this, new OnCompleteListener<AuthResult>() {
+                        @Override
+                        public void onComplete(@NonNull Task<AuthResult> task) {
+                            if (task.isSuccessful()) {
+                                FirebaseUser user = auth.getCurrentUser();
+                                //updateUI(user);
+                                startActivity(new Intent(LoginScreen.this, MainActivity.class));
+                                finish();
+                            }
+                            else {
+                                Toast.makeText(LoginScreen.this, "Authentication failed.",
+                                        Toast.LENGTH_SHORT).show();
+
+                                //updateUI(null);
+                                inputPassword.getText().clear();
+                            }
+                        }
+                    });
+            }
+        }
 
     public void goToSignup(View view){
         Intent intent = new Intent(this, SignUpScreen.class);
