@@ -5,3 +5,6 @@ Format needs to have - your name, day, date, the files that you worked on, and c
 4 May - Steve C
 * Re-add bugs/changelog/todo/licenses files
 * Signup.java - remove redundant classes, tidy code
+
+6 May - Steve C
+* LoginScreen.java - adjusted code to not show firebase data to user, tweaked how errors are displayed to end user due to invalid input, wrapped the login firebase auth task in an else { to ensure it is only executed when previous fail conditons are not met.
